Seekbar working, but does not correspond to the x,y values

--- a/app/src/main/res/layout/activity_canvas_size.xml
+++ b/app/src/main/res/layout/activity_canvas_size.xml
@@ -13,12 +13,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/resize_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="DONE" />
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/resize_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="DONE" />
+
+                <EditText
+                    android:id="@+id/resize_altitude"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter Max Altitude in Meters"
+                    android:inputType="numberDecimal"/>
+            </android.support.design.widget.TextInputLayout>
 
             <EditText
                 android:id="@+id/resize_height"
