--- a/app/src/main/res/layout/activity_canvas_size.xml
+++ b/app/src/main/res/layout/activity_canvas_size.xml
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter Max Altitude in Meters"
-                    android:inputType="numberDecimal"/>
+                    android:inputType="number"/>
             </android.support.design.widget.TextInputLayout>
 
             <EditText
