Started adding new obstacles

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
         android:visibility="gone"/>
 
     <ImageView
-        android:id="@+id/obstacle"
+        android:id="@+id/sword"
         android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:adjustViewBounds="true"
