--- a/app/src/main/res/layout/activity_objects.xml
+++ b/app/src/main/res/layout/activity_objects.xml
@@ -61,6 +61,22 @@
             android:layout_marginTop="10dp"
             android:checked="false"/>
 
+        <TextView
+            android:id="@+id/toggle_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:text="Publish Obstacles?" />
+
+        <ToggleButton
+            android:id="@+id/obstacle_publish_toggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:checked="false"
+            android:text="ObstaclePublishToggle"
+            android:textSize="20dp" />
+
     </LinearLayout>
 
     <!--<include layout="@layout/content_objects" />-->
