--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="utmg.android_interface.ObjectsActivity"
-    tools:showIn="@layout/activity_objects">
+    tools:context="utmg.android_interface.SettingsActivity"
+    tools:showIn="@layout/activity_settings">
 
 
 </android.support.constraint.ConstraintLayout>
