--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,7 +17,7 @@
     <item
         android:id="@+id/checkbox"
         android:orderInCategory="100"
-        android:title="Objects to Display"
+        android:title="Settings"
         app:showAsAction="never"/>
 
 </menu>
