--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,6 +19,9 @@
             <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
 
     <!--</android.support.design.widget.AppBarLayout>-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="585dp"
@@ -124,12 +127,19 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
+                        <Button
+                            android:id="@+id/button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Done" />
+
                         <EditText
                             android:id="@+id/resize_altitude"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Enter Max Altitude in Meters"
-                            android:inputType="number"/>
+                            android:inputType="numberDecimal"/>
                     </android.support.design.widget.TextInputLayout>
 
                     <EditText
@@ -155,6 +165,8 @@
     </LinearLayout>
 
 
+
+    </ScrollView>
 
     <!--<include layout="@layout/content_settings" />-->
 
