--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,176 +6,177 @@
     android:layout_height="match_parent"
     tools:context="utmg.android_interface.SettingsActivity">
 
-    <!--<android.support.design.widget.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
-
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize"-->
-            <!--android:background="?attr/colorPrimary"-->
-            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
-
-    <!--</android.support.design.widget.AppBarLayout>-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="585dp"
-        android:layout_height="810dp"
-        android:orientation="vertical"
-        android:paddingLeft="15dp"
-        android:paddingTop="5dp">
-
-        <TextView
-            android:id="@+id/mode_toggle_text"
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="Control Mode:" />
+            android:layout_height="match_parent"
+            android:weightSum="3"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
-        <Spinner
-            android:id="@+id/mode_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="15dp" />
-
-        <TextView
-            android:id="@+id/display_object_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="Objects to display:" />
-
-        <CheckBox
-            android:id="@+id/quad_checkbox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Quad"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:checked="false"/>
-
-        <CheckBox
-            android:id="@+id/sword_checkbox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sword"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:checked="false"/>
-
-        <CheckBox
-            android:id="@+id/obstacle1_checkbox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Obstacle1"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:checked="false"/>
-
-        <CheckBox
-            android:id="@+id/obstacle2_checkbox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Obstacle2"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:checked="false"/>
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="15dp" />
-
-        <TextView
-            android:id="@+id/toggle_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:text="Publish Obstacles?" />
-
-        <ToggleButton
-            android:id="@+id/obstacle_publish_toggle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:checked="false"
-            android:text="ObstaclePublishToggle"
-            android:textSize="20dp" />
-
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical" >
-
-            <android.support.design.widget.TextInputLayout
+            <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-                <android.support.design.widget.TextInputLayout
+                <!-- controls -->
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/mode_toggle_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:text="Control Mode:" />
+
+                    <Spinner
+                        android:id="@+id/mode_spinner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="15dp" />
+
+                    <TextView
+                        android:id="@+id/toggle_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:text="Publish Obstacles?" />
+
+                    <ToggleButton
+                        android:id="@+id/obstacle_publish_toggle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:checked="false"
+                        android:text="ObstaclePublishToggle"
+                        android:textSize="20dp" />
+
+                </LinearLayout>
+
+                <!-- objects to display -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+                    <TextView
+                        android:id="@+id/display_object_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:text="Objects to display:" />
+
+                    <CheckBox
+                        android:id="@+id/quad_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Quad"
+                        android:textSize="20dp"
+                        android:layout_marginTop="10dp"
+                        android:checked="false"/>
+
+                    <CheckBox
+                        android:id="@+id/sword_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Sword"
+                        android:textSize="20dp"
+                        android:layout_marginTop="10dp"
+                        android:checked="false"/>
+
+                    <CheckBox
+                        android:id="@+id/obstacle1_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Obstacle1"
+                        android:textSize="20dp"
+                        android:layout_marginTop="10dp"
+                        android:checked="false"/>
+
+                    <CheckBox
+                        android:id="@+id/obstacle2_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Obstacle2"
+                        android:textSize="20dp"
+                        android:layout_marginTop="10dp"
+                        android:checked="false"/>
+                </LinearLayout>
+
+                <!-- canvas size specs -->
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/display_canvas_size_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:text="Edit canvas size:" />
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <Button
-                            android:id="@+id/button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Done" />
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+
+                                <Button
+                                    android:id="@+id/button"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Done" />
+
+                                <EditText
+                                    android:id="@+id/resize_altitude"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="Enter Max Altitude in Meters"
+                                    android:inputType="numberDecimal"/>
+                            </android.support.design.widget.TextInputLayout>
+
+                            <EditText
+                                android:id="@+id/resize_height"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="Enter Height of Canvas in Meters"
+                                android:inputType="numberDecimal"/>
+
+                        </android.support.design.widget.TextInputLayout>
 
                         <EditText
-                            android:id="@+id/resize_altitude"
+                            android:id="@+id/resize_width"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Enter Max Altitude in Meters"
-                            android:inputType="numberDecimal"/>
+                            android:hint="Enter Width of Canvas in Meters"
+                            android:inputType="numberDecimal" />
+
                     </android.support.design.widget.TextInputLayout>
 
-                    <EditText
-                        android:id="@+id/resize_height"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Enter Height of Canvas in Meters"
-                        android:inputType="numberDecimal"/>
+                </LinearLayout>
 
-                </android.support.design.widget.TextInputLayout>
-
-                <EditText
-                    android:id="@+id/resize_width"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Enter Width of Canvas in Meters"
-                    android:inputType="numberDecimal" />
-
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
+            </TableRow>
+        </TableLayout>
 
     </ScrollView>
-
-    <!--<include layout="@layout/content_settings" />-->
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/fab"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_margin="@dimen/fab_margin"-->
-        <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->
 
 </android.support.design.widget.CoordinatorLayout>
