Added debug mode

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -62,6 +62,25 @@
                         android:text="ObstaclePublishToggle"
                         android:textSize="20dp" />
 
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="15dp" />
+
+                    <TextView
+                        android:id="@+id/toggle_debug_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:text="Debug mode?" />
+
+                    <ToggleButton
+                        android:id="@+id/debug_mode_toggle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:checked="false"
+                        android:textSize="20dp" />
+
                 </LinearLayout>
 
                 <!-- objects to display -->
