--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,12 +118,12 @@
 
     <ImageView
         android:id="@+id/quad1"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
-        android:src="@drawable/quad"
-        android:visibility="gone" />
+        android:src="@drawable/sword"
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/quad2"
@@ -136,24 +136,6 @@
 
     <ImageView
         android:id="@+id/quad3"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center"
-        android:src="@drawable/quad"
-        android:visibility="gone" />
-
-    <ImageView
-        android:id="@+id/quad4"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center"
-        android:src="@drawable/quad"
-        android:visibility="gone" />
-
-    <ImageView
-        android:id="@+id/quad5"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
