--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="utmg.android_interface.MainActivity">
@@ -21,70 +22,118 @@
             android:minHeight="170dp"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="bottom|right"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@android:color/holo_orange_dark"
-        app:srcCompat="@android:drawable/ic_menu_send" />
+        fab:fab_addButtonColorNormal="@android:color/holo_orange_dark"
+        fab:fab_colorPressed="@android:color/holo_orange_light"
+        fab:fab_icon="@android:drawable/ic_menu_send"
+        fab:fab_expandDirection="up">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/sendAll"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="60dp"
-        android:layout_marginRight="20dp"
-        app:backgroundTint="@android:color/white"
-        app:srcCompat="@android:drawable/ic_menu_send"
-        app:fabSize="mini"/>
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/sendQuad1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="Send Quad1"
+            fab:fab_colorNormal="@android:color/holo_red_dark"
+            fab:fab_colorPressed="@android:color/holo_red_light"
+            fab:fab_icon="@android:drawable/ic_menu_send"
+            fab:fab_size="mini"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/sendQuad1"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="95dp"
-        android:layout_marginRight="20dp"
-        app:backgroundTint="@android:color/holo_red_light"
-        app:srcCompat="@android:drawable/ic_menu_send"
-        app:fabSize="mini"/>
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/sendQuad2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="Send Quad2"
+            fab:fab_colorNormal="@android:color/holo_green_dark"
+            fab:fab_colorPressed="@android:color/holo_green_light"
+            fab:fab_icon="@android:drawable/ic_menu_send"
+            fab:fab_size="mini"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/sendQuad2"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="130dp"
-        android:layout_marginRight="20dp"
-        app:backgroundTint="@android:color/holo_green_light"
-        app:srcCompat="@android:drawable/ic_menu_send"
-        app:fabSize="mini"/>
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/sendQuad3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="Send Quad3"
+            fab:fab_colorNormal="@android:color/holo_blue_dark"
+            fab:fab_colorPressed="@android:color/holo_blue_light"
+            fab:fab_icon="@android:drawable/ic_menu_send"
+            fab:fab_size="mini"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/sendQuad3"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="165dp"
-        android:layout_marginRight="20dp"
-        app:backgroundTint="@android:color/holo_blue_light"
-        app:srcCompat="@android:drawable/ic_menu_send"
-        app:fabSize="mini"/>
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/sendAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="Send All"
+            fab:fab_colorNormal="@android:color/white"
+            fab:fab_colorPressed="@android:color/white"
+            fab:fab_icon="@android:drawable/ic_menu_send"
+            fab:fab_size="mini" />
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
-    <android.support.design.widget.FloatingActionButton
+
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/fab_clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_gravity="bottom|left"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@android:color/holo_red_dark"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        fab:fab_addButtonColorNormal="@android:color/holo_purple"
+        fab:fab_colorPressed="@android:color/holo_orange_light"
+        fab:fab_icon="@android:drawable/ic_menu_send"
+        fab:fab_expandDirection="up">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/clearQuad1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="Send Quad1"
+            fab:fab_colorNormal="@android:color/holo_red_dark"
+            fab:fab_colorPressed="@android:color/holo_red_light"
+            fab:fab_icon="@android:drawable/ic_menu_close_clear_cancel"
+            fab:fab_size="mini"/>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/clearQuad2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="Send Quad2"
+            fab:fab_colorNormal="@android:color/holo_green_dark"
+            fab:fab_colorPressed="@android:color/holo_green_light"
+            fab:fab_icon="@android:drawable/ic_menu_close_clear_cancel"
+            fab:fab_size="mini"/>
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/clearQuad3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="Send Quad3"
+            fab:fab_colorNormal="@android:color/holo_blue_dark"
+            fab:fab_colorPressed="@android:color/holo_blue_light"
+            fab:fab_icon="@android:drawable/ic_menu_close_clear_cancel"
+            fab:fab_size="mini" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/clearAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="Send All"
+            fab:fab_colorNormal="@android:color/black"
+            fab:fab_colorPressed="@android:color/black"
+            fab:fab_icon="@android:drawable/ic_menu_close_clear_cancel"
+            fab:fab_size="mini"/>
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 
     <LinearLayout
