--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -104,7 +104,7 @@
                         android:textSize="20dp"
                         android:layout_marginTop="10dp"
                         android:checked="false"
-                        android:textColor="@android:color/holo_red_light"/>
+                        android:textColor="@android:color/holo_red_dark"/>
 
                     <CheckBox
                         android:id="@+id/quad2_checkbox"
@@ -114,7 +114,7 @@
                         android:textSize="20dp"
                         android:layout_marginTop="10dp"
                         android:checked="false"
-                        android:textColor="@android:color/holo_green_light"/>
+                        android:textColor="@android:color/holo_green_dark"/>
 
                     <CheckBox
                         android:id="@+id/quad3_checkbox"
@@ -124,7 +124,7 @@
                         android:textSize="20dp"
                         android:layout_marginTop="10dp"
                         android:checked="false"
-                        android:textColor="@android:color/holo_blue_light"/>
+                        android:textColor="@android:color/holo_blue_dark"/>
 
                     <CheckBox
                         android:id="@+id/sword_checkbox"
