--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,13 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="utmg.android_interface.MainActivity">
-    <item
-        android:id="@+id/action_roscam"
-        android:orderInCategory="100"
-        android:title="@string/action_roscam"
-        app:showAsAction="never" />
 
-
+    <!--<item-->
+        <!--android:id="@+id/action_roscam"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title="@string/action_roscam"-->
+        <!--app:showAsAction="never" />-->
+    
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
